--- a/package.json
+++ b/package.json
@@ -4,20 +4,28 @@
   "description": "xuxule's blog",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node ./build/build.js",
+    "dev": "node ./build/dev-server.js"
   },
   "keywords": [
     "blog"
   ],
   "author": "xuxule",
   "license": "ISC",
-  "dependencies": {
-    "webpack": "^3.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.18.12",
+    "chokidar": "^1.7.0",
     "css-loader": "^0.28.4",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.0.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
   }
 }
