--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node ./build/build.js",
-    "dev": "node ./build/dev-server.js"
+    "dev": "node ./build/dev.js"
   },
   "keywords": [
     "blog"
