--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "xuxule",
   "license": "ISC",
   "dependencies": {
-    "glob": "^7.1.2"
+    "glob": "^7.1.2",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
@@ -25,6 +26,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
     "http-proxy": "^1.16.2",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
