--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
   ],
   "author": "xuxule",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "glob": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
     "browser-sync": "^2.18.12",
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.4",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "^2.29.0",
     "http-proxy": "^1.16.2",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
