--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.29.0",
     "http-proxy": "^1.16.2",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0",
